Fixed overflow issue causing break banner classes to not be aligned dead center (aligned with the centered arrow in the header

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -278,7 +278,7 @@ ul{
         height: 20rem;
     }
     .break-banner-top, .break-banner-mid, .break-banner-bottom{
-    padding-left: 2.1vw;
+    padding-right: 2rem;
     }
    
 }
